[package]
name = "aleo-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"]}
snarkvm = "1"
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.128"
num_cpus = "1"
rand = "0.8"

[dependencies.snarkvm-ledger-puzzle-epoch]
version = "1"
package = "snarkvm-ledger-puzzle-epoch"
features = ["synthesis"]
